tests/int/list_command/snapshots/integration__int__list_command__basic__crawk.snap
---
source: tests/int/list_command/basic.rs
info:
  program: crawk
  args:
    - list
    - crawk
---
success: true
exit_code: 0
----- stdout -----
analyzer
cache
constants
crawk
discover
discover::module_tree
error
graph
graph::cycles
graph::edges
graph::orphans
graph::paths
model
module_path
parser
parser::visitor
reference
resolve
rules
rules::eval
rules::load
utils
version

----- stderr -----
