tests/int/list_command/snapshots/integration__int__list_command__basic__main.snap
---
source: tests/int/list_command/basic.rs
info:
  program: crawk
  args:
    - list
    - main
---
success: true
exit_code: 0
----- stdout -----
cli
cli::overview
cli::validation
format
format::check_cmd
format::cycles
format::deps_cmd
format::list_cmd
format::orphans
format::paths
format::use_cmd
format::why_cmd
logger
main

----- stderr -----
