tests/int/list_command/snapshots/integration__int__list_command__basic__should_list_subtree_for_dir_module.snap
---
source: tests/int/list_command/basic.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - dir_module
---
success: true
exit_code: 0
----- stdout -----
dir_module
dir_module::child_dir
dir_module::child_file

----- stderr -----
