tests/int/list_command/snapshots/integration__int__list_command__basic__should_list_subtree_for_fixture_crate.snap
---
source: tests/int/list_command/basic.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - nesting
---
success: true
exit_code: 0
----- stdout -----
nesting
nesting::level1
nesting::level1::level2
nesting::level1::level2::level3

----- stderr -----
