tests/int/list_command/snapshots/integration__int__list_command__basic__should_list_with_root_for_own_lib.snap
---
source: tests/int/list_command/basic.rs
info:
  program: crawk
  args:
    - list
    - lib
---
success: true
exit_code: 0
----- stdout -----
analyzer
cache
constants
discover
discover::module_tree
error
graph
graph::cycles
graph::edges
graph::orphans
graph::paths
lib
model
module_path
parser
parser::visitor
reference
resolve
rules
rules::eval
rules::load
utils
version

----- stderr -----
